[tool.poetry]
name = "space-invaders-pygame"
version = "0.1.0"
description = ""
authors = ["fl0cky <sairusflo@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
